--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <h4> ᵀʰⁱˢ ⁱˢ ⁿᵒᵗ ᵃ ᵛⁱʳᵘˢ </h4>
       <p> Ͳհҽɾҽ ąɾҽ ą Ӏօէ օƒ ɾҽçìքìҽʂ ìղ էհҽ ìղէҽɾղҽէ օղ հօա էօ ʍąҟҽ ɾìçҽ աìէհ ҍҽąղʂ </p>
       <ul>
-        <li> <a href="https://codepen.io/vromex/pen/NWYRrLB?editors=1000"> Tweet </a> </li>
+        <li> <a href="https://VromeX.github.io/Tweets.html"> Tweet </a> </li>
         <li> <a href="https://codepen.io/vromex/pen/PoRGzdE?editors=1000"> Third </a> </li>
         <li> <a href="https://codepen.io/vromex/pen/GRxjqXM?editors=1000"> fourth</a> </li>
       </ul>
