--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       <p> Ͳհҽɾҽ ąɾҽ ą Ӏօէ օƒ ɾҽçìքìҽʂ ìղ էհҽ ìղէҽɾղҽէ օղ հօա էօ ʍąҟҽ ɾìçҽ աìէհ ҍҽąղʂ </p>
       <ul>
         <li> <a href="https://VromeX.github.io/Tweets.html"> Tweet </a> </li>
-        <li> <a href="https://codepen.io/vromex/pen/PoRGzdE?editors=1000"> Third </a> </li>
-        <li> <a href="https://codepen.io/vromex/pen/GRxjqXM?editors=1000"> fourth</a> </li>
+        <li> <a href="https://VromeX.github.io/3rd.html"> Third </a> </li>
+        <li> <a href="https://VromeX.github.io/4th.html"> fourth</a> </li>
       </ul>
     </header>
   <main>
