--- a/Tweets.html
+++ b/Tweets.html
@@ -10,9 +10,9 @@
     <h4> Rice with beans </h4>
     <p> There are a lot of recipies in the internet on how to make rice with beans </p>
     <ul>
-      <li> <a href="link"> index </a> </li>
-      <li> <a href="link"> Third </a> </li>
-      <li> <a href="link"> fourth</a> </li>
+      <li> <a href="https://VromeX.github.io/index.html"> index </a> </li>
+      <li> <a href="https://VromeX.github.io/3rd.html"> Third </a> </li>
+      <li> <a href="https://VromeX.github.io/4th.html"> fourth</a> </li>
     </ul>
   </header>
   <main>
