--- a/4th.html
+++ b/4th.html
@@ -8,9 +8,9 @@
       <h4> Serios page here </h4>
       <p> There are a lot of ways to make rice with beans </p>
       <ul>
-        <li> <a href="https://codepen.io/vromex/pen/NWYRrLB?editors=1000"> Tweet </a> </li>
-        <li> <a href="https://codepen.io/vromex/pen/PoRGzdE?editors=1000"> Third </a> </li>
-        <li> <a href="link"> index </a> </li>
+        <li> <a href="https://VromeX.github.io/Tweets.html"> Tweet </a> </li>
+        <li> <a href="https://VromeX.github.io/3rd.html"> Third </a> </li>
+        <li> <a href="https://VromeX.github.io/4th.html"> index </a> </li>
       </ul>
     </header>
   <main>
