--- a/3rd.html
+++ b/3rd.html
@@ -8,9 +8,9 @@
       <h4> Beans with rice </h4>
       <p> There are a lot of recipies in the internet on how to make beans with rice </p>
       <ul>
-        <li> <a href="https://codepen.io/vromex/pen/NWYRrLB?editors=1000"> Tweet </a> </li>
-        <li> <a href="link"> index </a> </li>
-        <li> <a href="link"> fourth</a> </li>
+        <li> <a href="https://VromeX.github.io/Tweets.html"> Tweet </a> </li>
+        <li> <a href="https://VromeX.github.io/3th.html"> index </a> </li>
+        <li> <a href="https://VromeX.github.io/4th.html"> fourth</a> </li>
       </ul>
     </header>
   <main>
