--- a/4th.html
+++ b/4th.html
@@ -10,7 +10,7 @@
       <ul>
         <li> <a href="https://VromeX.github.io/Tweets.html"> Tweet </a> </li>
         <li> <a href="https://VromeX.github.io/3rd.html"> Third </a> </li>
-        <li> <a href="https://VromeX.github.io/4th.html"> index </a> </li>
+        <li> <a href="https://VromeX.github.io/index.html"> index </a> </li>
       </ul>
     </header>
   <main>
