--- a/Tweets.html
+++ b/Tweets.html
@@ -2,7 +2,7 @@
 
 <head>
   <link href="http://apply.holbertonschool.com/level2/school.css" rel="stylesheet">
-  <link href="styleT.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
